CICD/GithubActions_Dockerhub_EKS/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: udassi/frontend-nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
